Improvement/UI logic (#73)
* support using awesome chatgpt prompts

* update webui dist

* support highlight.js

* update webui dist

* fix static

* limit token usage if there is no much left

* using react markdown instead of marked

* update webui dist
