# api/pb/model/common.pb.go
@@ -597,6 +597,108 @@ func (x *GenerateWechatQRCodeResponse) GetQrcode() string {
 	return ""
 }
 
+type Prompt struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Act    string `protobuf:"bytes,1,opt,name=act,proto3" json:"act,omitempty"`
+	Prompt string `protobuf:"bytes,2,opt,name=prompt,proto3" json:"prompt,omitempty"`
+}
+
+func (x *Prompt) Reset() {
+	*x = Prompt{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_model_common_proto_msgTypes[10]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *Prompt) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Prompt) ProtoMessage() {}
+
+func (x *Prompt) ProtoReflect() protoreflect.Message {
+	mi := &file_model_common_proto_msgTypes[10]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Prompt.ProtoReflect.Descriptor instead.
+func (*Prompt) Descriptor() ([]byte, []int) {
+	return file_model_common_proto_rawDescGZIP(), []int{10}
+}
+
+func (x *Prompt) GetAct() string {
+	if x != nil {
+		return x.Act
+	}
+	return ""
+}
+
+func (x *Prompt) GetPrompt() string {
+	if x != nil {
+		return x.Prompt
+	}
+	return ""
+}
+
+type ListPromptsResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Prompts []*Prompt `protobuf:"bytes,1,rep,name=prompts,proto3" json:"prompts,omitempty"`
+}
+
+func (x *ListPromptsResponse) Reset() {
+	*x = ListPromptsResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_model_common_proto_msgTypes[11]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ListPromptsResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ListPromptsResponse) ProtoMessage() {}
+
+func (x *ListPromptsResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_model_common_proto_msgTypes[11]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ListPromptsResponse.ProtoReflect.Descriptor instead.
+func (*ListPromptsResponse) Descriptor() ([]byte, []int) {
+	return file_model_common_proto_rawDescGZIP(), []int{11}
+}
+
+func (x *ListPromptsResponse) GetPrompts() []*Prompt {
+	if x != nil {
+		return x.Prompts
+	}
+	return nil
+}
+
 var File_model_common_proto protoreflect.FileDescriptor
 
 var file_model_common_proto_rawDesc = []byte{
@@ -672,17 +774,24 @@ var file_model_common_proto_rawDesc = []byte{
 	0x64, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x10, 0x0a, 0x03, 0x75, 0x72,
 	0x6c, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x75, 0x72, 0x6c, 0x12, 0x16, 0x0a, 0x06,
 	0x71, 0x72, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x71, 0x72,
-	0x63, 0x6f, 0x64, 0x65, 0x2a, 0x20, 0x0a, 0x0b, 0x4e, 0x75, 0x6d, 0x65, 0x72, 0x69, 0x63, 0x45,
-	0x6e, 0x75, 0x6d, 0x12, 0x08, 0x0a, 0x04, 0x5a, 0x45, 0x52, 0x4f, 0x10, 0x00, 0x12, 0x07, 0x0a,
-	0x03, 0x4f, 0x4e, 0x45, 0x10, 0x01, 0x42, 0x78, 0x0a, 0x0d, 0x63, 0x6f, 0x6d, 0x2e, 0x73, 0x65,
-	0x72, 0x76, 0x69, 0x63, 0x65, 0x76, 0x31, 0x42, 0x0b, 0x43, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x50,
-	0x72, 0x6f, 0x74, 0x6f, 0x50, 0x01, 0x5a, 0x16, 0x6e, 0x6f, 0x74, 0x69, 0x6f, 0x6e, 0x62, 0x6f,
-	0x79, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x62, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0xa2, 0x02,
-	0x03, 0x53, 0x58, 0x58, 0xaa, 0x02, 0x09, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x76, 0x31,
-	0xca, 0x02, 0x09, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x76, 0x31, 0xe2, 0x02, 0x15, 0x53,
-	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x76, 0x31, 0x5c, 0x47, 0x50, 0x42, 0x4d, 0x65, 0x74, 0x61,
-	0x64, 0x61, 0x74, 0x61, 0xea, 0x02, 0x09, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x76, 0x31,
-	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x63, 0x6f, 0x64, 0x65, 0x22, 0x32, 0x0a, 0x06, 0x50, 0x72, 0x6f, 0x6d, 0x70, 0x74, 0x12, 0x10,
+	0x0a, 0x03, 0x61, 0x63, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x61, 0x63, 0x74,
+	0x12, 0x16, 0x0a, 0x06, 0x70, 0x72, 0x6f, 0x6d, 0x70, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09,
+	0x52, 0x06, 0x70, 0x72, 0x6f, 0x6d, 0x70, 0x74, 0x22, 0x42, 0x0a, 0x13, 0x4c, 0x69, 0x73, 0x74,
+	0x50, 0x72, 0x6f, 0x6d, 0x70, 0x74, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12,
+	0x2b, 0x0a, 0x07, 0x70, 0x72, 0x6f, 0x6d, 0x70, 0x74, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b,
+	0x32, 0x11, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x76, 0x31, 0x2e, 0x50, 0x72, 0x6f,
+	0x6d, 0x70, 0x74, 0x52, 0x07, 0x70, 0x72, 0x6f, 0x6d, 0x70, 0x74, 0x73, 0x2a, 0x20, 0x0a, 0x0b,
+	0x4e, 0x75, 0x6d, 0x65, 0x72, 0x69, 0x63, 0x45, 0x6e, 0x75, 0x6d, 0x12, 0x08, 0x0a, 0x04, 0x5a,
+	0x45, 0x52, 0x4f, 0x10, 0x00, 0x12, 0x07, 0x0a, 0x03, 0x4f, 0x4e, 0x45, 0x10, 0x01, 0x42, 0x78,
+	0x0a, 0x0d, 0x63, 0x6f, 0x6d, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x76, 0x31, 0x42,
+	0x0b, 0x43, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x50, 0x72, 0x6f, 0x74, 0x6f, 0x50, 0x01, 0x5a, 0x16,
+	0x6e, 0x6f, 0x74, 0x69, 0x6f, 0x6e, 0x62, 0x6f, 0x79, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x62,
+	0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0xa2, 0x02, 0x03, 0x53, 0x58, 0x58, 0xaa, 0x02, 0x09, 0x53,
+	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x76, 0x31, 0xca, 0x02, 0x09, 0x53, 0x65, 0x72, 0x76, 0x69,
+	0x63, 0x65, 0x76, 0x31, 0xe2, 0x02, 0x15, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x76, 0x31,
+	0x5c, 0x47, 0x50, 0x42, 0x4d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0xea, 0x02, 0x09, 0x53,
+	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -698,7 +807,7 @@ func file_model_common_proto_rawDescGZIP() []byte {
 }
 
 var file_model_common_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
-var file_model_common_proto_msgTypes = make([]protoimpl.MessageInfo, 10)
+var file_model_common_proto_msgTypes = make([]protoimpl.MessageInfo, 12)
 var file_model_common_proto_goTypes = []interface{}{
 	(NumericEnum)(0),                     // 0: servicev1.NumericEnum
 	(*ErrorResponse)(nil),                // 1: servicev1.ErrorResponse
@@ -711,15 +820,18 @@ var file_model_common_proto_goTypes = []interface{}{
 	(*OAuthProvider)(nil),                // 8: servicev1.OAuthProvider
 	(*OAuthURLResponse)(nil),             // 9: servicev1.OAuthURLResponse
 	(*GenerateWechatQRCodeResponse)(nil), // 10: servicev1.GenerateWechatQRCodeResponse
+	(*Prompt)(nil),                       // 11: servicev1.Prompt
+	(*ListPromptsResponse)(nil),          // 12: servicev1.ListPromptsResponse
 }
 var file_model_common_proto_depIdxs = []int32{
-	2, // 0: servicev1.ErrorResponse.error:type_name -> servicev1.ErrorObject
-	8, // 1: servicev1.OAuthURLResponse.providers:type_name -> servicev1.OAuthProvider
-	2, // [2:2] is the sub-list for method output_type
-	2, // [2:2] is the sub-list for method input_type
-	2, // [2:2] is the sub-list for extension type_name
-	2, // [2:2] is the sub-list for extension extendee
-	0, // [0:2] is the sub-list for field type_name
+	2,  // 0: servicev1.ErrorResponse.error:type_name -> servicev1.ErrorObject
+	8,  // 1: servicev1.OAuthURLResponse.providers:type_name -> servicev1.OAuthProvider
+	11, // 2: servicev1.ListPromptsResponse.prompts:type_name -> servicev1.Prompt
+	3,  // [3:3] is the sub-list for method output_type
+	3,  // [3:3] is the sub-list for method input_type
+	3,  // [3:3] is the sub-list for extension type_name
+	3,  // [3:3] is the sub-list for extension extendee
+	0,  // [0:3] is the sub-list for field type_name
 }
 
 func init() { file_model_common_proto_init() }
@@ -848,6 +960,30 @@ func file_model_common_proto_init() {
 				return nil
 			}
 		}
+		file_model_common_proto_msgTypes[10].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*Prompt); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_model_common_proto_msgTypes[11].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*ListPromptsResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -855,7 +991,7 @@ func file_model_common_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_model_common_proto_rawDesc,
 			NumEnums:      1,
-			NumMessages:   10,
+			NumMessages:   12,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
